--- a/scss/parts/_variable.scss
+++ b/scss/parts/_variable.scss
@@ -44,7 +44,7 @@ $grey-800: #656565;
 $grey-900: #515151;
 $grey-1000: #3d3c3c;
 
-// text
+// text in 1900 px screen
 h1 {
   font-size: 4.4rem;
   font-weight: 800;
@@ -70,4 +70,117 @@ p {
   font-weight: 400;
   line-height: 153.125%;
   color: $textColor;
+}
+
+@media screen and (max-width: 1499px){
+  h1 {
+    font-size: 4rem;
+    font-weight: 800;
+    line-height: 131.523%;
+    color: $textColor;
+  }
+  h2 {
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 131.523%;
+    color: $textColor;
+  }
+  h3 {
+    font-size: 2.4rem;
+    font-weight: 600;
+    line-height: 3.2rem;
+    color: $textColor;
+  }
+  p {
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 153.125%;
+    color: $textColor;
+  }
+}
+@media screen and (max-width: 1399px){
+  h1 {
+    font-size: 3.5rem;
+    font-weight: 800;
+    line-height: 131.523%;
+    color: $textColor;
+  }
+  h2 {
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 131.523%;
+    color: $textColor;
+  }
+  h3 {
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 3.2rem;
+    color: $textColor;
+  }
+  p {
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 153.125%;
+    color: $textColor;
+  }
+}
+@media screen and (max-width: 1199px){
+  h1 {
+    font-size: 2.8rem;
+    font-weight: 800;
+    line-height: 131.523%;
+    color: $textColor;
+  }
+  h2 {
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 131.523%;
+    color: $textColor;
+  }
+  h3 {
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 3.2rem;
+    color: $textColor;
+  }
+  p {
+    font-size: 1.3rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 153.125%;
+    color: $textColor;
+  }
+}
+@media screen and (max-width: 991px){
+  h1 {
+    font-size: 2.4rem;
+    font-weight: 800;
+    line-height: 131.523%;
+    color: $textColor;
+  }
+  h2 {
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 131.523%;
+    color: $textColor;
+  }
+  h3 {
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 3.2rem;
+    color: $textColor;
+  }
+  p {
+    font-size: 1.3rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 153.125%;
+    color: $textColor;
+  }
 }
